# dbot

./: ChangeLog.md  README.md  dbot.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
test/: Spec.hs
