cabal-version: 1.12

name:           dbot
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/Rembane/dbot#readme>
homepage:       https://github.com/Rembane/dbot#readme
bug-reports:    https://github.com/Rembane/dbot/issues
author:         Andreas Ekeroot
maintainer:     andeke@gmail.com
copyright:      2019 Andreas Ekeroot
license:        Apache-2.0
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/Rembane/dbot

library
  exposed-modules:
      Lib
  hs-source-dirs:
      src
  ghc-options:
       -Wall -Wunused-binds -Wunused-imports -Wcompat
  build-depends:
      base >=4.7 && <5
    , async == 2.2.2
    , attoparsec == 0.13.2.2
    , bytestring == 0.10.8.2
    , connection == 0.2.8
    , mtl == 2.2.2
    , network == 2.8.0.1
    , req == 2.0.1
    , tagsoup == 0.14.8
    , text == 1.2.3.1
  default-language: Haskell2010

executable dbot-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Wunused-binds -Wunused-imports -Wcompat
  build-depends:
      base >=4.7 && <5
    , dbot
    , optparse-applicative == 0.14.3.0
    , text
  default-language: Haskell2010

test-suite dbot-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wunused-binds -Wunused-imports -Wcompat
  build-depends:
      base >=4.7 && <5
    , attoparsec
    , bytestring
    , dbot
    , tasty == 1.2
    , tasty-hunit == 0.10.0.1
  default-language: Haskell2010
